--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
@@ -26,6 +27,7 @@
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
     "pg": "^8.13.1",
+    "redis": "^4.7.0",
     "url": "^0.11.4"
   }
 }
